# arcsys-collision-editor-wasm

./: .gitignore  .gitmodules  Cargo.toml  LICENSE_MIT  index.html
docs/: arcsys_collision_editor_wasm.js  arcsys_collision_editor_wasm_bg.wasm  index.html  sw.js
src/: app.rs  lib.rs  main.rs  render.rs
src/app/: boxes.rs  open.rs
